# IntentBox

./: .gitignore  Makefile  README.md  pyproject.toml
apps/inbox_ai/: admin.py  api.py  apps.py  models.py  replies.py  services.py  signals.py  tasks.py  tests.py
apps/inbox_ai/data/: inbox_seed.csv
apps/inbox_ai/management/commands/: train_inbox_intent.py
apps/inbox_ai/migrations/: 0001_initial.py
config/: celery.py  settings.py
